--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "expo": "^54.0.22",
     "expo-haptics": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
     "zustand": "^5.0.9"
   },
