--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.13.5",
     "expo": "^54.0.22",
     "expo-haptics": "~15.0.7",
     "expo-status-bar": "~3.0.8",
