--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@gluestack-style/react": "^1.0.57",
+    "@gluestack-ui/themed": "^1.1.73",
     "@lottiefiles/dotlottie-react": "^0.13.5",
     "expo": "^54.0.22",
     "expo-haptics": "~15.0.7",
@@ -19,7 +21,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-svg": "15.12.1",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-svg": "^15.12.1",
     "react-native-web": "^0.21.0",
     "zustand": "^5.0.9"
   },
