--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "^54.0.22",
     "expo-haptics": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "lottie-react": "^2.4.1",
     "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
