--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-status-bar": "~3.0.8",
     "lottie-react": "^2.4.1",
     "lottie-react-native": "^7.3.4",
+    "openai": "^6.16.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -36,6 +37,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-native": "^5.0.0",
+    "react-native-dotenv": "^3.4.11",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.48.0"
   },
